Compiler/tests/bad/if5.nx
type t = [0 .. 10];

if(1)
{
    print(t);
}
else
{
    print(4);
}